feat: 让访客导航可在任意页面切换主题
将主题模式控制同步置于桌面顶栏与移动端用户菜单，确保当前选择、焦点与响应式交互一致。

Constraint: 不新增依赖、图标资产或导航路由变更；移动端控件须使用完整触控高度。

Rejected: 只在一个入口提供切换 | 无法满足桌面和移动端共享导航的可达性。

Confidence: high

Scope-risk: narrow

Directive: 主题相关视觉值应继续复用导航语义变量，门户菜单也必须保有相同变量作用域。

Tested: VisitorTopNav contract；visitor theme 2/2；TypeScript+Vite production build；git diff --check。

Not-tested: npm run lint 被 Task 1 VisitorThemeProvider 的既有 react-refresh 规则错误阻断。

Co-authored-by: OmX <omx@oh-my-codex.dev>